<resources>
    <string name="app_name">Wyliczanie średniej</string>
    <string name="gradesButton">OCENY</string>
    <string name="firstName">Imię:</string>
    <string name="lastName">Nazwisko:</string>
    <string name="gradesCount">Liczba ocen:</string>
    <string name="gradesCountHint">Liczba od 5 do 15</string>
    <string name="lastNameHint">Nazwisko z dużej litery</string>
    <string name="firstNameHint">Imię z dużej litery</string>
    <string name="firstNameWarningText">Imię musi zaczynać się z dużej litery i nie posiadać cyfr</string>
    <string name="lastNameWarningText">Nazwisko musi zaczynać się z dużej litery i nie posiadać cyfr</string>
    <string name="gradesCountWarningText">Liczba ocen musi być z przedziału &lt;5,15&gt;</string>
    <string name="gradeName">Ocena:</string>
    <string name="calculateGrade">Sprawdź</string>
</resources>